force-app/main/default/objects/Lead_Score_Rule__mdt/Lead_Score_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Regras parametrizaveis para calculo de score de leads.</description>
    <label>Lead Score Rule</label>
    <pluralLabel>Lead Score Rules</pluralLabel>
</CustomObject>