force-app/main/default/objects/Lead_Score_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LeadValue</fullName>
                <label>Lead Value</label>
            </value>
            <value>
                <fullName>LeadSource</fullName>
                <label>Lead Source</label>
            </value>
            <value>
                <fullName>LeadProduct</fullName>
                <label>Lead Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>