force-app/main/default/objects/Lead_Score_Rule__mdt/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <label>Match Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>