force-app/main/default/objects/Lead_Score_Rule__mdt/fields/MatchValue__c.field-meta.xml
<CustomField>
    <fullName>MatchValue__c</fullName>
    <label>Match Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>