force-app/main/default/objects/Lead_Score_Rule__mdt/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>